--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@auth0/auth0-spa-js": "^1.3.1",
+    "auth0-editprofile-widget": "^1.0.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "jw-angular-pagination": "^1.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
