--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.4",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
@@ -22,6 +23,7 @@
     "@auth0/auth0-spa-js": "^1.3.1",
     "auth0-editprofile-widget": "^1.0.0",
     "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jw-angular-pagination": "^1.1.0",
     "popper.js": "^1.15.0",
